syntax = "proto3";

package com.chuntao;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.chuntao.service";
option java_outer_classname = "SensorService";

// Sensor Service: monitor air index and analyse data
service Sensor {
  // Simple RPC for collecting sensor data
  rpc GetSensorData(SensorRequest) returns (SensorResponse) {}
  // Client-side streaming RPC for analysing sensor data based on sensor response
  rpc AnalyseSensorData(stream SensorResponse) returns (AnalyseResponse) {}
}

message SensorRequest {
  int32 sensor_id = 1;
}

message SensorResponse {
  string location = 1;
  float PM25 = 2; // PM2.5 density in Î¼g/m3 of the air
  float temperature = 3; // Air temperature in Celsius
  float VOC = 4; // VOC level in mg/m3
  float humidity = 5; // Humidity in Percentage
  float CO = 6; // CO in ppm
}

message AnalyseResponse {
  string analyse = 1;
  string location = 2;
  int32 pollution_level = 3;
  string message = 4;
  google.protobuf.Timestamp timestamp = 5;
}